--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,36 +1,43 @@
-name: Demo pipeline 
+name: Demo pipeline
 on:
   push:
-    branches: 
+    branches:
       - main
       - dev
   pull_request:
     branches: [main, dev]
-  schedule:
-    - cron:  "*/1 * * * *"
+    
 jobs:
-  setup_job:
-    runs-on: ubuntu-latest  # macos-latest , windows-latest 
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v4
-      - name: create file 
-        run: touch github-action.txt
-      - name: print hello world
-        run: echo Hello world
-      - name: display readme file
-        run: cat README.md
-  build_job:
-    needs: 
-        - setup_job
-        - deploy_job
-    runs-on: windows-latest
-    steps:
-      - name: display hello
-        run: echo hello 
-  deploy_job:
-    needs: 
-        - setup_job
-    runs-on: macos-latest
-    steps:
-      - run: echo hellow mac
+    setup-job:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v3
+            - name: Create file
+              run:  |
+                 touch github-action.txt
+                 ls -la
+                 echo "Hello World!"
+                 cat README.md 
+            
+              
+    
+    builds-job:
+        needs: 
+            - setup-job
+        runs-on: ubuntu-latest
+        steps:
+            - name: displayhello world
+              run: echo "Hello from windows"
+            
+            - name: display github-action file
+              run: cat github-action.txt
+             
+              
+            
+    deploy-job:
+        needs: builds-job
+        runs-on: macos-latest
+        steps:
+            - name: display hello world
+              run: echo "Hello from mac"
