--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,43 +1,45 @@
-name: Demo pipeline
+name: Demo pipeline 
 on:
   push:
-    branches:
+    branches: 
       - main
       - dev
   pull_request:
     branches: [main, dev]
-    
+  # schedule:
+  #   - cron:  "*/1 * * * *"
 jobs:
-    setup-job:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v3
-            - name: Create file
-              run:  |
-                 touch github-action.txt
-                 ls -la
-                 echo "Hello World!"
-                 cat README.md 
-            
-              
-    
-    builds-job:
-        needs: 
-            - setup-job
-        runs-on: ubuntu-latest
-        steps:
-            - name: displayhello world
-              run: echo "Hello from windows"
-            
-            - name: display github-action file
-              run: cat github-action.txt
-             
-              
-            
-    deploy-job:
-        needs: builds-job
-        runs-on: macos-latest
-        steps:
-            - name: display hello world
-              run: echo "Hello from mac"
+  setup_job:
+    runs-on: ubuntu-latest  # macos-latest , windows-latest 
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: create file 
+        run: |
+          touch github-action.txt
+          echo from first job > github-action.txt
+          ls -la
+          echo Hello world
+          cat README.md
+      - name: upload my artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-file
+          path: github-action.txt
+  build_job:
+    needs: 
+      - setup_job
+    runs-on: ubuntu-latest
+    steps:
+      - name: display hello
+        run: echo hello 
+      - uses: actions/download-artifact@v4
+        with:
+          path: github-action.txt
+      - name: Display github-action.txt
+        run: cat github-action.txt
+  deploy_job:
+    needs: build_job
+    runs-on: macos-latest
+    steps:
+      - run: echo hellow mac
